tests/expected_backend_compiler_owned_collection_operation.diag.out
<input>:7:57: error: collection operation 'nonempty_map_from_entries_using_last_bindings' requires copyable map value type 'V', got affine-bearing 'test::Receipt'
        nonempty_map_from_entries_using_last_bindings<Text, Receipt>(entries)
                                                            ^^^^^^^
